[project]
name = "noishi"
version = "0.1.0"
description = "一个依赖注入和事件框架。"
authors = [
    {name = "Shua-github", email = "CHA_shua@outlook.com"},
]
dependencies = ["pyserial-asyncio>=0.6", "gsm0338>=1.1.0", "shua-struct>=0.1.2", "watchfiles>=1.1.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = ["Private :: Do Not Upload"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
main.call = "noishi.main:main"
gentype.call = "tool.type_export:main"
uninstall = "pdm remove"

[tool.setuptools]
packages = ["noishi"]

